<resources>
    <string name="app_name">হাজিরা খাতা</string>
    <string name="add">এড</string>
    <string name="edit">এডিট</string>
    <string name="delete">ডিলিট</string>
    <string name="ADD">নতুন নোটটি সার্ভারে যুক্ত</string>
    <string name="DELETE">ডিলিট করুন</string>
    <string name="SAVE">সেভ করুন</string>
    <string name="action_settings">Settings</string>
    <string name="month_spinner_bangla">নিচ থেকে যেকোন একটি মাসের মোট উপস্থিতির দেখতে চাইলে ক্লিক করুন।</string>
    <string name="hint_for_distribution_entry"><font size="12"> নং বন্টনের নাম দিন (যেমন : ক্লাস টেস্ট)</font></string>
    <string name="help_fb_url">"https://www.facebook.com/groups/2035798976667483/permalink/2564138133833562/"</string>
    <string name="no_to_dos">এখানে যাবতীয় শিডিউল যুক্ত করে রাখুন।</string>
    <string name="no_to_dos_in_class_fragment">আপনি এখনো কোন ক্লাসের ডাটাবেজ তৈরি করেননি । \n নিচের বাটনটি চেপে কোন ক্লাসের জন্য ডাটাবেজ তৈরি করুন।কোনো ক্লাসের ডাটাবেজ ডিলিট করতে চাইলে ক্লাসের নামের উপর লং প্রেস করুন।\n\nডাটাবেজ তৈরীর পর আপনার জন্য যা যা সুবিধা থাকছে এপে - \n১)এক মিনিটেই উপস্থিতি নেয়া,শ্রেনী উপস্থিতির রিপোর্ট দেখা,অভিভাবকদের রিপোর্ট জানানোর এবং রিপোর্ট প্রিন্ট করার সুবিধা\n২)আপনার ক্লাস রুটিন বানানোর সুবিধা\n৩) রেজাল্ট শিট তৈরী এবং প্রিন্ট করার সুবিধা \n ৪) আপনার ক্লাস ব্যবস্থাপনার সকল সুবিধাসহ আরো অনেক ফিচার।</string>
    <string name="no_to_dos_in_single_student_data">এখনো এই শিক্ষার্থীর উপস্থিতি গণনা শুরু হয়নি </string>
    <string name="no_to_dos_in_attendence_activity">এখনো কোন শিক্ষার্থীর ডাটা সার্ভারে যুক্ত হয়নি তাই কোন উপস্থিতির ডাটা নেই।আপনি যদি কোন শিক্ষার্থীর সম্পূর্ণ ডাটা দেখতে চান তাহলে এখানে ভবিষ্যতে উপস্থাপিত লিস্ট থেকে তার নামের উপর ক্লিক করুন আর আপনি যদি ক্লাসের সকল শিক্ষার্থীর উপস্থিতির ডাটা ডিলিট করতে চান তাহলে উপরের ডানপাশের ডিলিট চিহ্ন ক্লিক করুন</string>
    <string name="instruction_for_note">আপনি এখনো এই ক্লাসের জন্য কোন কিছু নোট করেননি।\nচাইলে নিচের বাটনটি চেপে কোন নোট (পরীক্ষার নাম্বার,লেকচার,মাসিক বেতন,রেসাল্ট,প্রশ্ন ইত্যাদি যে কোন কিছু) তৈরি করতে পারেন</string>
    <string name="instruction_for_student_Activity">এখনো কোন শিক্ষার্থীর তথ্য ডাটাবেজে যুক্ত হয়নি। চাইলে নিচের বাটনটি চেপে তথ্য যুক্ত করতে পারেন</string>
    <string name="intro1">শিক্ষক হিসেবে আপনার ব্যক্তিগত মতামত,দিকনির্দেশনা,মূল্যায়ন,শিক্ষা বিষয়ক তথ্য,টিউটোরিয়ালসহ সকল কিছু এই অংশে লিখুন এবং বাংলাদেশের শিক্ষক সমাজের সাথে যুক্ত থাকুক</string>
    <string name="intro2">শিক্ষকদের লিখা শিক্ষক কথনসমুহ এখানে পড়ুন</string>
    <string name="attendence">শ্রেণী\nউপস্থিতি</string>
    <string name="studentProfile">শিক্ষার্থীদের প্রোফাইল</string>
    <string name="subjectOrTopicHints">বিষয় অথবা টপিকের নাম (ঐচ্ছিক)</string>
    <string name="model_test_intro">এখানে আপনি শিক্ষক নিবন্ধন পরীক্ষার প্রস্তুতি স্বরুপ মডেলটেষ্টে অংশগ্রহণ করতে পারবেন।নিচে থেকে সময় নির্বাচন করুন আপনি যত সময়ের মডেলটেষ্টে অংশগ্রহণ করতে চান।</string>
    <string name="title">শিরোনাম</string>
    <string name="task">কাজ</string>
    <string name="remind_me">আমাকে মনে করিয়ে দিন</string>
    <string name="choose_date">তারিখ</string>
    <string name="choose_time">সময়</string>
    <string name="remind_date_and_time">আপনাকে মনে করিয়ে দেয়া হবে  %1$s তারিখ  %2$s %3$s সময়</string>
    <string name="remind_date_and_time_for_daily">আপনাকে %1$s তারিখ হতে প্রতিদিন %2$s %3$s সময় মনে করিয়ে দেয়া হবে </string>
    <string name="about">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">GK</string>
    <string name="done_label">হয়েছে</string>
    <string name="date_reminder_default">আজকের সময়টি</string>
    <string name="date_error_check_again">আপনি যে তারিখ/সময়টি সিলেক্ট করেছেন তা অতীত হয়েছে।নতুন তারিখ ইনপুট দিন,ধন্যবাদ।</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on_summary">Night mode is on</string>
    <string name="night_mode_off_summary">Night mode is off</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="education_ministry">শিক্ষা মন্ত্রণালয়</string>
    <string name="education_ministry_for_primary">প্রাথমিক ও গণশিক্ষা মন্ত্রণালয়</string>
    <string name="education_directorie_for_primary">প্রাথমিক শিক্ষা অধিদপ্তর</string>
    <string name="education_boards">শিক্ষা বোর্ড সমূহ</string>
    <string name="education_for_intermadiate_and_higher">মাধ্যমিক ও উচ্চশিক্ষা অধিদপ্তর</string>
    <string name="admin_for_non_government_teaching">বেসরকারি শিক্ষক নিবন্ধন ও প্রত্যয়ন কর্তৃপক্ষ</string>
    <string name="shikkhok_bataon">শিক্ষক বাতায়ন \n (শিক্ষকদের দ্বারা তৈরি সকল শ্রেণীর জন্য ডিজিটাল কন্টেন্টসমূহ)</string>
    <string name="shikkhok_dot_com">শিক্ষক ডট কম \n (এখানে বাংলা ভাষায় নানা বিষয়ে অনলাইন কোর্স দেয়া হয়, যা হবে সবার জন্য উন্মুক্ত । যে কেউ সম্পূর্ণ বিনা মূল্যে এখানে নানা বিষয় শিখতে পারবেন। )</string>
    <string name="khan_acadamy"> খান একাডেমি \n(শিক্ষক,শিক্ষার্থী,অভিভাবক সকলের জন্য,সব জায়গায় বিনামূল্যে বিশ্বমানের শিক্ষা পৌঁছে দেওয়াই এর লক্ষ্য।)</string>
    <string name="ten_min_school"> 10 minute school\n(বাংলাদেশের সর্ববৃহৎ অনলাইন স্কুল)</string>
    <string name="chomok">চমক হাসানের মজায় ছলে গনিত শেখা</string>
    <string name="elearning_and_emanual">ই-লার্নিং এবং ই-ম্যানুয়েল \n (নবম এবং দশম শ্রেণির শিক্ষার্থী এবং শিক্ষকদের জন্য এনিমেশন,ডায়াগ্রাম,ইমেজ,সিমুলেশন,ভিডিও সম্বলিত ডিজিটাল কন্টেন্ট) </string>
    <string name="digital_content_for_primary">প্রাথমিক শিক্ষা কন্টেন্ট ইন্টারঅ্যাকটিভ মাল্টিমিডিয়া ডিজিটাল ভার্সন </string>
    <string name="oneForTeacher">প্রথম শ্রেণি \n(শিক্ষক সহায়িকা)</string>
    <string name="twoForTeacher">দ্বিতীয় শ্রেণি \n(শিক্ষক সহায়িকা)</string>
    <string name="treeForTeacher">তৃতীয় শ্রেণি \n(শিক্ষক সহায়িকা)</string>
    <string name="fourForTeacher">চতুর্থ শ্রেণি \n(শিক্ষক সহায়িকা)</string>
    <string name="fiveForTeacher">পঞ্চম শ্রেণি \n(শিক্ষক সহায়িকা)</string>
    <string name="one">প্রথম শ্রেণি</string>
    <string name="two">দ্বিতীয় শ্রেণি</string>
    <string name="tree">তৃতীয় শ্রেণি</string>
    <string name="four">চতুর্থ শ্রেণি</string>
    <string name="five">পঞ্চম শ্রেণি</string>
    <string name="six">ষষ্ঠ শ্রেণি</string>
    <string name="seven">সপ্তম শ্রেণি</string>
    <string name="right">অষ্টম শ্রেণি</string>
    <string name="nine_ten">নবম-দশম শ্রেণি</string>
    <string name="eleven_twelve">একাদশ-দ্বাদশ শ্রেণি</string>
    <string name="oneEng">প্রথম শ্রেণি \n(ইংরেজি ভার্সন)</string>
    <string name="twoEng">দ্বিতীয় শ্রেণি \n(ইংরেজি ভার্সন)</string>
    <string name="treeEng">তৃতীয় শ্রেণি \n(ইংরেজি ভার্সন)</string>
    <string name="fourEng">চতুর্থ শ্রেণি \n(ইংরেজি ভার্সন)</string>
    <string name="fiveEng">পঞ্চম শ্রেণি \n(ইংরেজি ভার্সন)</string>
    <string name="sixMad">ষষ্ঠ শ্রেণি \n(মাদ্রাসা)</string>
    <string name="sevenMad">সপ্তম শ্রেণি \n(মাদ্রাসা)</string>
    <string name="rightMad">অষ্টম শ্রেণি \n(মাদ্রাসা)</string>
    <string name="nine_tenMad">নবম-দশম শ্রেণি \n(মাদ্রাসা)</string>
    <string name="error_massege_for_input">নুন্যতম একটি অক্ষর ব্যবহার করুন,ধন্যবাদ। </string>
    <string name="insert_class">ক্লাসের নাম ইনপুট দিন</string>
    <string name="insert_section">সেকশন/সেশনের নাম ইনপুট দিন (ঐচ্ছিক)</string>
    <string name="student_name">শিক্ষার্থীর নাম (আবশ্যিক) </string>
    <string name="student_roll">রোল/আইডি (আবশ্যিক) </string>
    <string name="student_contact">শিক্ষার্থীর ফোন নাম্বার(ঐচ্ছিক)</string>
    <string name="student_parent_contact">পিতা/অভিভাবকের নাম্বার(ঐচ্ছিক)</string>
    <string name="student_parent_name">পিতা/অভিভাবকের নাম (ঐচ্ছিক) </string>
    <string name="student_parent_contact2">মাতা/২য় অভিভাবকের নাম্বার(ঐচ্ছিক)</string>
    <string name="student_parent_name2">মাতা/২য় অভিভাবকের নাম(ঐচ্ছিক)</string>
    <string name="class_record">এই শিক্ষার্থীর যাবতীয় ক্লাস রেকর্ড</string>
    <string name="birth_certification_no">জন্মসনদের নাম্বার(ঐচ্ছিক)</string>
    <string name="birth_date_selection_hints">জন্ম তারিখ সিলেক্ট করতে এখানে ক্লিক করুন</string>
    <string name="upload_student_pro_pic_hints">শিক্ষার্থীর ছবি আপলোড করতে এখানে ক্লিক করুন</string>
    <string name="note_title_hint">নোটের শিরোনাম</string>
    <string name="note_content_hint">নোটের মুল অংশ এখানে লিখুন</string>
    <string-array name="snooze_options">
        <item>১০ মিনিট</item>
        <item>৩০ মিনিট </item>
        <item>১ ঘন্টা</item>
    </string-array>
    <string name="snooze">পুনরায়</string>
    <string name="remove">শিডিউল রিমুভ করুন</string>
    <string name="todo_error">Please enter a Todo</string>
    <string name="clg">১৪ তম শিক্ষক নিবন্ধন প্রশ্ন এবং উত্তর \n (কলেজ পর্যায়)</string>
    <string name="scl">১৪ তম শিক্ষক নিবন্ধন প্রশ্ন এবং উত্তর \n (স্কুল পর্যায়)</string>
</resources>