<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#e3f2fd"
app:layout_behavior="@string/appbar_scrolling_view_behavior">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btn_dialog_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:elevation="20sp"
        android:padding="@dimen/btn_padding"
        android:text="@string/elearning_and_emanual"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#E91E63"
        android:padding="@dimen/btn_padding"
        android:text="@string/digital_content_for_primary"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#9C27B0"
        android:padding="@dimen/btn_padding"
        android:text="@string/oneForTeacher"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#3F51B5"
        android:padding="@dimen/btn_padding"
        android:text="@string/twoForTeacher"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#2196F3"
        android:padding="@dimen/btn_padding"
        android:text="@string/treeForTeacher"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#009688"
        android:padding="@dimen/btn_padding"
        android:text="@string/fourForTeacher"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#4CAF50"
        android:padding="@dimen/btn_padding"
        android:text="@string/fiveForTeacher"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#FF9800"
        android:padding="@dimen/btn_padding"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#FF5722"
        android:padding="@dimen/btn_padding"
        android:text="@string/two"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#795548"
        android:padding="@dimen/btn_padding"
        android:text="@string/tree"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#607D8B"
        android:padding="@dimen/btn_padding"
        android:text="@string/four"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#795548"
        android:padding="@dimen/btn_padding"
        android:text="@string/five"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btn_dialog_13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#FF5722"
        android:padding="@dimen/btn_padding"
        android:text="@string/six"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btn_dialog_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#FF9800"
        android:padding="@dimen/btn_padding"
        android:text="@string/seven"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btn_dialog_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#4CAF50"
        android:padding="@dimen/btn_padding"
        android:text="@string/right"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btn_dialog_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20sp"
        android:layout_marginTop="@dimen/btn_margin"
        android:backgroundTint="#009688"
        android:padding="@dimen/btn_padding"
        android:text="@string/nine_ten"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btn_dialog_17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#2196F3"
        android:padding="@dimen/btn_padding"
        android:text="@string/eleven_twelve"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btn_dialog_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#3F51B5"
        android:padding="@dimen/btn_padding"
        android:text="@string/oneEng"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btn_dialog_19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#E91E63"
        android:padding="@dimen/btn_padding"
        android:text="@string/twoEng"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btn_dialog_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:elevation="20sp"
        android:padding="@dimen/btn_padding"
        android:text="@string/treeEng"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#E91E63"
        android:padding="@dimen/btn_padding"
        android:text="@string/fourEng"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#9C27B0"
        android:padding="@dimen/btn_padding"
        android:text="@string/fiveEng"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#3F51B5"
        android:padding="@dimen/btn_padding"
        android:text="@string/sixMad"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#2196F3"
        android:padding="@dimen/btn_padding"
        android:text="@string/sevenMad"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#009688"
        android:padding="@dimen/btn_padding"
        android:text="@string/rightMad"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:elevation="20sp"
        android:backgroundTint="#4CAF50"
        android:padding="@dimen/btn_padding"
        android:text="@string/nine_tenMad"
        android:textColor="@color/white"
        android:textSize="14sp" />


    <!--<Button-->
    <!--android:id="@+id/btn_dialog_27"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/btn_margin"-->
    <!--android:backgroundTint="#FF9800"-->
    <!--android:padding="@dimen/btn_padding"-->
    <!--android:text="@string/shikkhok_dot_com"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="14sp" />-->

    <!--<Button-->
    <!--android:id="@+id/btn_dialog_28"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/btn_margin"-->
    <!--android:backgroundTint="#FF5722"-->
    <!--android:padding="@dimen/btn_padding"-->
    <!--android:text="@string/khan_acadamy"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="14sp" />-->

    <!--<Button-->
    <!--android:id="@+id/btn_dialog_29"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/btn_margin"-->
    <!--android:backgroundTint="#795548"-->
    <!--android:padding="@dimen/btn_padding"-->
    <!--android:text="@string/ten_min_school"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="14sp" />-->

</LinearLayout>
</androidx.core.widget.NestedScrollView>