<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3f2fd"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="20sp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btn_dialog_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:elevation="20sp"
            android:padding="@dimen/btn_padding"
            android:text="@string/education_ministry"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:elevation="20sp"
            android:backgroundTint="#E91E63"
            android:padding="@dimen/btn_padding"
            android:text="@string/education_ministry_for_primary"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:elevation="20sp"
            android:backgroundTint="#9C27B0"
            android:padding="@dimen/btn_padding"
            android:text="@string/education_boards"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:elevation="20sp"
            android:backgroundTint="#3F51B5"
            android:padding="@dimen/btn_padding"
            android:text="@string/education_for_intermadiate_and_higher"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:elevation="20sp"
            android:backgroundTint="#2196F3"
            android:padding="@dimen/btn_padding"
            android:text="@string/education_directorie_for_primary"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:padding="@dimen/btn_padding"
            android:elevation="20sp"
            android:backgroundTint="#009688"
            android:text="@string/admin_for_non_government_teaching"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/btn_padding"
            android:layout_marginTop="@dimen/btn_margin"
            android:elevation="20sp"
            android:backgroundTint="#4CAF50"
            android:textColor="@color/white"
            android:text="@string/shikkhok_bataon"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:elevation="20sp"
            android:backgroundTint="#FF9800"
            android:padding="@dimen/btn_padding"
            android:text="@string/shikkhok_dot_com"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:elevation="20sp"
            android:backgroundTint="#FF5722"
            android:padding="@dimen/btn_padding"
            android:text="@string/khan_acadamy"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:elevation="20sp"
            android:backgroundTint="#795548"
            android:padding="@dimen/btn_padding"
            android:text="@string/ten_min_school"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <Button
            android:id="@+id/btn_dialog_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:backgroundTint="#FF5722"
            android:elevation="20sp"
            android:padding="@dimen/btn_padding"
            android:text="@string/chomok"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>