<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueLight"
    android:padding="@dimen/activity_horizontal_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.Teachers.HaziraKhataByGk.Scheduler.CustomTextInputLayout
        android:id="@+id/class_name_textinputLayout"
        app:hintTextAppearance="@style/Hints"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/classText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="start|bottom"
            android:lines="2"
            android:padding="20dp"
            android:hint="@string/insert_class"
            android:ems="10"
            />
    </com.Teachers.HaziraKhataByGk.Scheduler.CustomTextInputLayout>


    <com.Teachers.HaziraKhataByGk.Scheduler.CustomTextInputLayout
        android:id="@+id/sectionName_textinputLayout"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/Hints"
        android:gravity="center"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/sectionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|bottom"
            android:hint="@string/insert_section"
            android:inputType="text"
            android:lines="2"
            android:padding="20dp"
            />
    </com.Teachers.HaziraKhataByGk.Scheduler.CustomTextInputLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:backgroundTint="#4CAF50"
            android:textColor="@color/white"
            android:elevation="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

        <!--<Button-->
            <!--android:id="@+id/btnEdit"-->
            <!--android:backgroundTint="#FF9800"-->
            <!--android:elevation="15sp"-->
            <!--android:textColor="@color/white"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/edit" />-->

        <Button
            android:id="@+id/btnDelete"
            android:backgroundTint="#F44336"
            android:elevation="15sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>

    </LinearLayout>

</LinearLayout>